Base fontsize set to default prevent browser zoom. Collapse sidebar on chat tile click.

--- a/client/src/components/panes/ContentPane.scss
+++ b/client/src/components/panes/ContentPane.scss
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    // padding: $gutter_l;
+    padding: $gutter_l;
     // box-shadow: 0 5px 8px $color_shade10;
 
     .sidebar-button {
@@ -31,6 +31,14 @@
 
       .role {
         color: $color_offwhite;
+      }
+
+      @include respond(mobile) {
+        button {
+          span {
+            display: none;
+          }
+        }
       }
     }
   }
