--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-$font-scale-factor: 14px;
+$font-scale-factor: 16px;
 $font-size_xs: $font-scale-factor * 0.8;
 $font-size_s: $font-scale-factor * 0.9;
 $font-size_m: $font-scale-factor * 1;
